==> j0v0j/STM32/yizai2/HARDWARE/RS485/rs485.c <==
#include "sys.h"		    
#include "rs485.h"	 
#include "delay.h"
#include "usart.h"
#include "FreeRTOS.h"
#include "task.h"
//////////////////////////////////////////////////////////////////////////////////	 
//本程序只供学习使用，未经作者许可，不得用于其它任何用途
//ALIENTEK精英STM32开发板
//RS485驱动 代码	   
//正点原子@ALIENTEK
//技术论坛:www.openedv.com
//修改日期:2012/9/9
//版本：V1.0
//版权所有，盗版必究。
//Copyright(C) 广州市星翼电子科技有限公司 2009-2019
//All rights reserved									  
//////////////////////////////////////////////////////////////////////////////////


#ifdef EN_USART2_RX   	//如果使能了接收


//接收缓存区 	
u8 RS485_RX_BUF[64];  	//接收缓冲,最大64个字节.
//接收到的数据长度
u8 RS485_RX_CNT=0;   		  
u8 RE_Head_flag=0;
u8 RE_Tail_flag=0;
u8 DH1_flag,DH2_flag;
u8 RS485_flag=1;
//分别记录两个","的下标
u8 DH1_dex,DH2_dex;
u8 mx[3],my[3],dj;
u8 err[]="err";
#define   Head  '['
#define   Tail  ']'

void USART2_IRQHandler(void)
{
	u8 res;	    
 	if(USART_GetITStatus(USART2, USART_IT_RXNE) != RESET) //接收到数据
	{	 
	 			 
		res =USART_ReceiveData(USART2); 	//读取接收到的数据
		if(RS485_RX_CNT<64)
		{
			switch(res)
			{
				case Head:
					RE_Head_flag=1;
					RE_Tail_flag=0;
					break;
				case Tail:
					RE_Tail_flag=1;
					RE_Head_flag=0;
					break;
			}
			if(RE_Head_flag)
			{
				RS485_RX_BUF[RS485_RX_CNT]=res;		//记录接收到的值
				if(res==',')
				{
					if(!DH1_flag)
					{
						DH1_dex=RS485_RX_CNT;
						DH1_flag=1;
					}
					else if(!DH2_flag)
					{
						DH2_dex=RS485_RX_CNT;
						DH2_flag=1;
					}					
				}
				RS485_RX_CNT++;						//接收数据个数应该为  12,56,0
			}
			if(RE_Tail_flag)
			{		
				RS485_RX_BUF[RS485_RX_CNT++]=res;		//记录接收到的值	
				RS485_RX_BUF[RS485_RX_CNT]='\0';	
//				printf("%s\r\n",RS485_RX_BUF);

				if(DH1_dex==2)          //mx为一位数
				{	
					mx[0]=RS485_RX_BUF[1];
					mx[2]=mx[0]-48;       //得到mx的数字类型
//					printf("mx=%d\r\n",mx[2]);
				}
				else if(DH1_dex==3) 
				{
					mx[0]=RS485_RX_BUF[1];
					mx[1]=RS485_RX_BUF[2];
					mx[2]=(mx[0]-48)*10+(mx[1]-48);
//					printf("mx=%d\r\n",mx[2]);
				}
				else
				{
				//数据错误
					RS485_Send_Data(err,4);
//					printf("mx err\r\n");
				}
				if((DH2_dex-DH1_dex)==2)
				{
					my[0]=RS485_RX_BUF[DH2_dex-1];
					my[2]=my[0]-48;
					dj=RS485_RX_BUF[DH2_dex+1];
//					printf("my=%d\r\n",my[2]);
				}
				else if((DH2_dex-DH1_dex)==3)
				{
					my[0]=RS485_RX_BUF[DH2_dex-2];
					my[1]=RS485_RX_BUF[DH2_dex-1];
					my[2]=(my[0]-48)*10+(my[1]-48);
					dj=RS485_RX_BUF[DH2_dex+1]-48;
//					printf("my=%d\r\n",my[2]);
				}
				else
				{
				//数据错误
//					printf("my err\r\n");
					RS485_Send_Data(err,4);
				}
				
//				printf("dj=%d",dj);
				RS485_Send_Data(RS485_RX_BUF,RS485_RX_CNT);
				RS485_flag=0;
//				printf("RS485_flag=%d\r\n",RS485_flag);
				RE_Tail_flag=0;
				RE_Head_flag=0;
				DH1_flag=0;
				DH2_flag=0;
			}
		} 
	}  											 
} 
#endif										 
//初始化IO 串口2
//pclk1:PCLK1时钟频率(Mhz)
//bound:波特率	  
void RS485_Init(u32 bound)
{  
  GPIO_InitTypeDef GPIO_InitStructure;
  USART_InitTypeDef USART_InitStructure;
 	NVIC_InitTypeDef NVIC_InitStructure;
 
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA|RCC_APB2Periph_GPIOD, ENABLE);//使能GPIOA,D时钟
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART2,ENABLE);//使能USART2时钟
	
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_7;				 //PD7端口配置
 	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP; 		 //推挽输出
 	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
 	GPIO_Init(GPIOD, &GPIO_InitStructure);
 
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_2;	//PA2
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;	//复用推挽
  GPIO_Init(GPIOA, &GPIO_InitStructure);
   
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_3;//PA3
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING; //浮空输入
  GPIO_Init(GPIOA, &GPIO_InitStructure);  

	RCC_APB1PeriphResetCmd(RCC_APB1Periph_USART2,ENABLE);//复位串口2
	RCC_APB1PeriphResetCmd(RCC_APB1Periph_USART2,DISABLE);//停止复位
 
	
 #ifdef EN_USART2_RX		  	//如果使能了接收
	USART_InitStructure.USART_BaudRate = bound;//波特率设置
	USART_InitStructure.USART_WordLength = USART_WordLength_8b;//8位数据长度
	USART_InitStructure.USART_StopBits = USART_StopBits_1;//一个停止位
	USART_InitStructure.USART_Parity = USART_Parity_No ;///奇偶校验位
	USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;//无硬件数据流控制
	USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;//收发模式

  USART_Init(USART2, &USART_InitStructure); ; //初始化串口
  
	NVIC_InitStructure.NVIC_IRQChannel = USART2_IRQn; //使能串口2中断
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 3; //先占优先级2级
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 3; //从优先级2级
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE; //使能外部中断通道
	NVIC_Init(&NVIC_InitStructure); //根据NVIC_InitStruct中指定的参数初始化外设NVIC寄存器
 
  USART_ITConfig(USART2, USART_IT_RXNE, ENABLE);//开启中断
   
  USART_Cmd(USART2, ENABLE);                    //使能串口 

 #endif

  RS485_TX_EN=0;			//默认为接收模式
 
}

//RS485发送len个字节.
//buf:发送区首地址
//len:发送的字节数(为了和本代码的接收匹配,这里建议不要超过64个字节)
void RS485_Send_Data(u8 *buf,u8 len)
{
	u8 t;
	RS485_TX_EN=1;			//设置为发送模式
  for(t=0;t<len;t++)		//循环发送数据
	{		
		while(USART_GetFlagStatus(USART2, USART_FLAG_TC) == RESET);	 
		USART_SendData(USART2,buf[t]);
	}	 
	while(USART_GetFlagStatus(USART2, USART_FLAG_TC) == RESET);	
	RS485_RX_CNT=0;	  
	RS485_TX_EN=0;				//设置为接收模式	
}
//RS485查询接收到的数据
//buf:接收缓存首地址
//len:读到的数据长度
u8 RS485_Receive_Data(u8 *buf,u8 *len)
{
	u8 rxlen=RS485_RX_CNT;
	u8 i=0;
	*len=0;				//默认为0
	vTaskDelay(10);		//等待10ms,连续超过10ms没有接收到一个数据,则认为接收结束
	if(rxlen==RS485_RX_CNT&&rxlen)//接收到了数据,且接收完成了
	{
		for(i=0;i<rxlen;i++)
		{
			buf[i]=RS485_RX_BUF[i];	
		}		
		*len=RS485_RX_CNT;	//记录本次数据长度
		RS485_RX_CNT=0;		//清零
		return 0;
	}
	return 1;
}
